app/styles/hitchhike-photo.sass
#topmenu
  background-color: black
  h1
    margin: 0
  a
    color: #ddd

#topmenu-wrapper
  width: 840px
  height: 250px
  margin: 0 auto
  padding-top: 8px

#top-wrapper  
  width: 800px
  height: 250px
  margin: 0 auto
  position: relative
#another-wrapper
  position: relative

#main_nav
  font-family: fantasy
  margin: 0 auto
  padding-left: 38px
  padding-top: 8px
  width: 800px
  height: 34px
  list-style-type: none
  li
    padding: 3px 100px 0 0
    float: left
  li#nav_authenitcation

#map_canvas
  height: 250px
  width: 300px
  float: right
  
#hitchhike-photo
  float: right
  height: 250px
  overflow: hidden
  position: relative
  width: 500px
  z-index: 100
  font-size: 62.5%
  img
    -moz-border-radius: 5px 0 0 5px
    -webkit-border-radius: 5px 0 0 5px
    border-radius: 5px 0 0 5px
    display: block
    height: 250px
    width: 500px

a
  &#hitchhike-photo-left, &#hitchhike-photo-right
    background-position: left top
    background-repeat: no-repeat
    display: none
    height: 43px
    position: absolute
    text-indent: -9999px
    top: 30px
    width: 43px
    z-index: 150
  &#hitchhike-photo-left
    background-image: url( "/images/site_photography_left.png" )
    left: 20px
  &#hitchhike-photo-right
    background-image: url( "/images/site_photography_right.png" )
    right: 20px

#hitchhike-photo-loader
  background-color: #151515
  color: #F0F0F0
  display: none
  font-size: 11px
  font-style: italic
  height: 25px
  line-height: 22px
  position: absolute
  right: 0px
  text-align: center
  top: 0px
  width: 120px
  z-index: 150

#hitchhike-details
  float: left
  color: white
  font-family: Arial,"MS Trebuchet",sans-serif
  width: 190px
  position: absolute
  left: 56px
  h1
    font-size: 29px
  dl
    font-size: 13px
    text-align: right
    dd
      color: #888888
      margin: 0

#hitchhike-photo-details
  background-image: url("/images/site_photo_details_background.png")
  bottom: -52px
  color: #999999
  font-size: 1.1em
  height: 25px
  list-style-type: none
  margin: 0px 0px 0px 0px
  overflow: hidden
  padding: 10px
  position: absolute
  width: 780px
  z-index: 150
  p
    font-size: 100%
    margin: 0
    
#hitchhike-photo
  ul
    font-size: 100%
    list-style-type: none
    margin: 0px 0px 0px 0px
    padding: 0px 0px 0px 0px
  a
    color: #F0F0F0
  li
    border-left: 1px dotted #FFFFFF
    float: left
    margin: 0px 0px 0px 0px
    padding-left: 20px
    padding-right: 20px
    &.first
      border-left-width: 0px

